welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:3: error: illegal start of simple expression
  while (!final()){
          ^SnakeBuggle:7: error: ')' expected but '}' found.
}
^SnakeBuggle:27: error: identifier expected but 'final' found.
def final():Boolean {
    ^